Fixed more grammar on about page. Fixed alignment issue on about page. Added meta tags to the layout.

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -103,6 +103,10 @@ body {
   padding-bottom: 20px;
 }
 
+#about h2 {
+    margin-right: 20px;
+}
+
 div.flash {
   font-size: 1.3em;
 }
